# django-doorkeeper

./: .gitignore  LICENSE  README.md  pyproject.toml  runtests.py
docs/: configuration.md
example/: manage.py
example/demo_app/: urls.py  views.py
example/demo_app/templates/demo_app/: base.html  home.html  public.html
example/demo_app/templates/doorkeeper/: doorkeeper_entrance.html
example/doorkeeper_demo/: asgi.py  settings.py  urls.py  wsgi.py
src/doorkeeper/: decorators.py  forms.py  helpers.py  middleware.py  urls.py  views.py
src/doorkeeper/templates/doorkeeper/: doorkeeper_entrance.html
src/doorkeeper/tests/: base.py  test_authentication.py  test_bypass.py  test_cookies.py  test_redirects.py  test_smoke.py  urls.py
src/doorkeeper/tests/test_app/: urls.py  views.py
